--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="./index.js" defer></script>
   <link rel="stylesheet" href="./style.css">
-  <title>Document</title>
+  <title>Tab</title>
 </head>
 <body>
   <h1>Hello</h1>
